welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:16: error: not found: type k
      setCouleurBrosse(T[k])
                         ^Array1:16: error: variable T of type Array[java.awt.Color] does not take type parameters.
      setCouleurBrosse(T[k])
                        ^